plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.2'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	maven{url 'https://jitpack.io'}
}

dependencies {
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '3.2.1'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-test'
	implementation "org.springframework.boot:spring-boot-starter-security"

	implementation 'com.github.iamport:iamport-rest-client-java:0.2.23'


	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	implementation 'com.theokanning.openai-gpt3-java:client:0.18.2'
	implementation 'com.theokanning.openai-gpt3-java:service:0.18.2'
	implementation 'com.theokanning.openai-gpt3-java:api:0.18.2'

	implementation 'com.stripe:stripe-java:22.13.0'
	implementation 'javax.xml.bind:jaxb-api:2.4.0-b180830.0359'
	implementation 'sh.platform:config:2.2.3'

	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
	useJUnitPlatform()
}
